# micro-backend

./: .env  README.md  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
micro_backend/: asgi.py  settings.py  urls.py  wsgi.py
